feat: footer menu

--- a/index.html
+++ b/index.html
@@ -20,5 +20,23 @@
         </div>
       </div>
     </nav>
+
+    <div class="menu_pill menu_client_portal">
+      <a href="#">Client Portal</a>
+    </div>
+    <div class="menu_pill menu_request_invite">
+      <a href="#">Request Invite</a>
+    </div>
+
+    <section>
+      Privacy Policy Terms of Service FAQ Anti-fraud Policy DMCA Policy
+      <ul class="footer_menu_right">
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms of Service</a></li>
+        <li><a href="#">Anti-fraud Policy</a></li>
+        <li><a href="#">DMCA Policy</a></li>
+        <li><a href="#">FAQ</a></li>
+      </ul>
+    </section>
   </body>
 </html>
